test/data/syntax-errors/no-comma-in-printes.gs
Num x = 5
Num y = 4
printes x, y
